--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         }
     ],
     "require": {
-        "monolog/monolog": "^2.1"
+      "monolog/monolog": "^2.1",
+      "ext-pdo": "*",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-0": {
