--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
       "ext-pdo": "*",
       "ext-json": "*",
         "symfony/routing": "^5.2",
-        "slim/slim": "^4.7"
+        "slim/slim": "^4.7",
+        "slim/psr7": "^1.3"
     },
     "autoload": {
         "psr-0": {
