--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
       "ext-json": "*",
         "symfony/routing": "^5.2",
         "slim/slim": "^4.7",
-        "slim/psr7": "^1.3"
+        "slim/psr7": "^1.3",
+        "twbs/bootstrap": "4.4.1"
     },
     "autoload": {
         "psr-0": {
